cabal-version:      2.4
name:               haskell-planets
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             icebox246
maintainer:         iceboxpoczta@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-planets
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Planet

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        sdl2 ^>=2.5.3.2

    hs-source-dirs:   app
    default-language: Haskell2010
